--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,11 +2,24 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:gravity="center"
+    android:background="@color/colorAccent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <TextView
+    <com.example.user.androidx.library.SqaureImageView
+        android:id="@+id/icon"
+        android:src="@mipmap/ic_launcher"
+        android:scaleType="fitXY"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text"
+        android:text="app_nameaaaaaaaaa"
+        android:textColor="@android:color/black"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
