--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -3,14 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/colorAccent"
-    android:layout_width="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <com.example.user.androidx.library.SqaureImageView
         android:id="@+id/icon"
+        android:background="?android:attr/selectableItemBackground"
         android:src="@mipmap/ic_launcher"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -18,9 +19,10 @@
         android:id="@+id/text"
         android:text="app_nameaaaaaaaaa"
         android:textColor="@android:color/black"
+        android:textAlignment="center"
         android:ellipsize="end"
         android:maxLines="1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
